feat: set state run (./gradlew run)